--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,4 +1,7 @@
 {% extends "jobs/base.html" %}
 {% block content %}
-   <h1>Home Page!</h1>
+<div class="container">
+    <h1 class="">Home Page!</h1>
+</div>
+   
 {% endblock content %}
