--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="{% static 'jobs/style.css' %}">
-    <title>Document</title>
+    {% if title %}
+	        <title>Axiom | {{ title }}</title>
+	    {% else %}
+	        <title>Axiom</title>
+    {% endif %}
 </head>
 <body>
     <header class="site-header">
@@ -29,6 +33,7 @@
                 <a class="nav-item nav-link" href="{% url 'jobs-home' %}">Home</a>
                 <a class="nav-item nav-link" href="{% url 'jobs-postings' %}">Jobs</a>
                 <a class="nav-item nav-link" href="{% url 'jobs-about' %}">About</a>
+                <a class="nav-item nav-link" href="{% url 'jobs-contact' %}">Contact</a>
               </div>
               <!-- Navbar Right Side -->
             
