--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -14,9 +14,10 @@
 </head>
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark">
+        <!-- <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark"> -->
+        <nav class="navbar navbar-expand-md bg-steel">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}">Axiom Consultants</a>
+            <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"><img src="/media/axiom-logo.webp" alt="axiom logo" width="300px"></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -29,20 +30,39 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
-              <div class="navbar-nav mr-auto">
+              <div class="navbar-nav me-auto">
                 <a class="nav-item nav-link" href="{% url 'jobs-home' %}">Home</a>
                 <a class="nav-item nav-link" href="{% url 'jobs-postings' %}">Jobs</a>
                 <a class="nav-item nav-link" href="{% url 'jobs-about' %}">About</a>
                 <a class="nav-item nav-link" href="{% url 'jobs-contact' %}">Contact</a>
               </div>
               <!-- Navbar Right Side -->
-            
+              <div class="navbar-nav">
+                {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>  
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                {% endif %}
+              </div>
             </div>
           </div>
         </nav>
       </header>
     
-    {% block content %}{% endblock %}
+      <main role="main" class="container">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+          {% block content %}{% endblock %}
+      </main>
+        
+    
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
