--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -1,9 +1,24 @@
-{% extends "jobs/base.html" %}
-{% block content %}
-   <h1>Job Postings Page!</h1>
-   {% for post in posts %}
-   <h1>{{ post.title }}</h1>
-   <p>By {{ post.author }} on {{ post.date_posted }} </p>
-   <p>{{ post.content }}</p>
+{% extends "jobs/base.html" %} {% block content %}
+<main class="container">
+  <div class="hero container-fluid bglight p-5">
+    <h1 class="">Our Current Job Openings</h1>
+    <hr class="my-4">
+    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur nam voluptatem. Nostrum nisi in nemo incidunt tempore iure facilis delectus consequatur? Omnis libero voluptate minus veritatis doloremque earum ducimus.</p>
+    
+  </div>
+{% for job in jobs %}
+
+<div class="media content-section">
+  <div class="media-body">
+    <div class="article-metadata row">
+      <small class="text-muted col">Location: {{ job.location }}</small>
+      <small class="text-muted col text-end">Posted: {{ job.date_posted|date:"F d, Y" }}</small>
+    </div>
+    <h2><a class="article-title" href="#">{{ job.job_title }}</a></h2>
+    <p class="article-content">{{ job.description }}</p>
+  </div>
+</div>
+
 {% endfor %}
+ 
 {% endblock content %}
