--- a/jobs/static/jobs/style.css
+++ b/jobs/static/jobs/style.css
@@ -1,6 +1,8 @@
 body {
     background: #fafafa;
     color: #333333;
+    max-width: 1100px;
+    margin: 0 auto;
     /* margin-top: 5rem; */
   }
   
@@ -38,6 +40,12 @@ body {
     border: 1px solid #dddddd;
     border-radius: 3px;
     margin-bottom: 20px;
+  }
+
+  .home-hero {
+    min-height: 75vh;
+    background:url(/media/meeting.jpg) center center no-repeat;
+    background-size: cover;
   }
   
   .article-title {
