--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -51,7 +51,7 @@
         </nav>
       </header>
     
-      <main role="main" class="container">
+      <main role="main" class="">
           {% if messages %}
             {% for message in messages %}
               <div class="alert alert-{{ message.tags }}">
