--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,10 +1,16 @@
-{% extends "jobs/base.html" %}
-{% block content %}
-<div class="hero container-fluid bglight p-5">
-    <h1 class="">Home Page!</h1>
-    <hr class="my-4">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur nam voluptatem. Nostrum nisi in nemo incidunt tempore iure facilis delectus consequatur? Omnis libero voluptate minus veritatis doloremque earum ducimus.</p>
+{% extends "jobs/base.html" %} {% block content %}
+<div class="home-hero container-fluid bglight p-5 text-white">
+
+    <h1 class="text-white">Home Page!</h1>
+    <hr class="my-4" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+      nam voluptatem. Nostrum nisi in nemo incidunt tempore iure facilis
+      delectus consequatur? Omnis libero voluptate minus veritatis doloremque
+      earum ducimus.
+    </p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</div>
-   
+  </div>
+
+
 {% endblock content %}
