--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,6 +9,20 @@
             <p class="text-secondary">{{ user.email }}</p>
         </div>
         </div>
-        <!-- FORM HERE -->
+
+    <!--  method POST sends form data to view-->
+    <form method="POST" enctype="multipart/form-data">
+        <!-- CSRF token required for security -->
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile Info</legend>
+            <!-- display django standard UserCreationForm -->
+            {{ update_form|crispy }}
+            {{ profile_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
     </div>
 {% endblock content %}
