--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -14,7 +14,7 @@
       <small class="text-muted col">Location: {{ job.location }}</small>
       <small class="text-muted col text-end">Posted: {{ job.date_posted|date:"F d, Y" }}</small>
     </div>
-    <h2><a class="article-title" href="#">{{ job.job_title }}</a></h2>
+    <h2><a class="article-title" href="{% url 'job-detail' job.id %}">{{ job.job_title }}</a></h2>
     <p class="article-content">{{ job.description }}</p>
   </div>
 </div>
