--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -39,6 +39,7 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'job-create' %}">Post New Job</a> 
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>  
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
