--- a/jobs/static/jobs/style.css
+++ b/jobs/static/jobs/style.css
@@ -1,7 +1,7 @@
 body {
-    background: #fafafa;
+    background: white;
     color: #333333;
-    max-width: 1100px;
+    max-width: 1300px;
     margin: 0 auto;
     /* margin-top: 5rem; */
   }
@@ -19,11 +19,11 @@ body {
   }
   
   .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: darkslategray;
   }
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: rgb(26, 44, 44);
   }
   
   .site-header .navbar-nav .nav-link.active {
@@ -49,7 +49,7 @@ body {
   }
   
   .article-title {
-    color: #444444;
+    color: blue;
   }
   
   a.article-title:hover {
@@ -94,4 +94,10 @@ body {
   
   .account-heading {
     font-size: 2.5rem;
+  }
+
+  .salary {
+    background-color: green;
+    color: white;
+    padding: 3px;
   }
