--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -1,71 +1,93 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="{% static 'jobs/style.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="{% static 'jobs/style.css' %}"
+    />
     {% if title %}
-	        <title>Axiom | {{ title }}</title>
-	    {% else %}
-	        <title>Axiom</title>
+    <title>Axiom | {{ title }}</title>
+    {% else %}
+    <title>Axiom</title>
     {% endif %}
-</head>
-<body>
+  </head>
+  <body>
     <header class="site-header">
-        <!-- <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark"> -->
-        <nav class="navbar navbar-expand-md bg-steel">
-          <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"><img src="/media/axiom-logo.webp" alt="axiom logo" width="300px"></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarToggle"
-              aria-controls="navbarToggle"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-              <div class="navbar-nav me-auto">
-                <a class="nav-item nav-link" href="{% url 'jobs-home' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'jobs-postings' %}">Jobs</a>
-                <a class="nav-item nav-link" href="{% url 'jobs-about' %}">About</a>
-                <a class="nav-item nav-link" href="{% url 'jobs-contact' %}">Contact</a>
-              </div>
-              <!-- Navbar Right Side -->
-              <div class="navbar-nav">
-                {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'job-create' %}">Post New Job</a> 
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>  
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-                {% else %}
-                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-                {% endif %}
-              </div>
+      <!-- <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark"> -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
+            ><img src="/media/axiom_logo_no_bg.webp" alt="axiom logo" width="300px"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggle"
+            aria-controls="navbarToggle"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav me-auto">
+              <a class="nav-item nav-link" href="{% url 'jobs-home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'jobs-postings' %}"
+                >Jobs</a
+              >
+              <a class="nav-item nav-link" href="{% url 'jobs-about' %}"
+                >About</a
+              >
+              <a class="nav-item nav-link" href="{% url 'jobs-contact' %}"
+                >Contact</a
+              >
+            </div>
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+              {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="{% url 'job-create' %}"
+                >Post New Job</a
+              >
+              <a class="nav-item nav-link" href="{% url 'profile' %}"
+                >Profile</a
+              >
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+              {% else %}
+              <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+              <a class="nav-item nav-link" href="{% url 'register' %}"
+                >Register</a
+              >
+              {% endif %}
             </div>
           </div>
-        </nav>
-      </header>
-    
-      <main role="main" class="">
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-              </div>
-            {% endfor %}
-          {% endif %}
-          {% block content %}{% endblock %}
-      </main>
-        
-    
+        </div>
+      </nav>
+    </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</body>
+    <main role="main" class="">
+      {% if messages %} {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      {% endfor %} {% endif %} {% block content %}{% endblock %}
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
