--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
-            ><img src="/media/axiom_logo_no_bg.webp" alt="axiom logo" width="300px"
+            ><img src="/media/axiom_logo_no_bg.webp" alt="axiom logo" width="250px"
           /></a>
           <button
             class="navbar-toggler"
@@ -56,9 +56,10 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-              <a class="nav-item nav-link" href="{% url 'job-create' %}"
-                >Post New Job</a
-              >
+              {% if user.is_staff %}
+                <a class="nav-item nav-link" href="{% url 'job-create' %}"
+                >Post New Job</a>
+              {% endif %}
               <a class="nav-item nav-link" href="{% url 'profile' %}"
                 >Profile</a
               >
@@ -80,6 +81,10 @@
       <div class="alert alert-{{ message.tags }}">{{ message }}</div>
       {% endfor %} {% endif %} {% block content %}{% endblock %}
     </main>
+
+    <footer>
+      
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
