--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -13,8 +13,9 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="{% static 'jobs/style.css' %}"
+      href="{% static 'jobs/css/style.css' %}"
     />
+
     {% if title %}
     <title>Axiom | {{ title }}</title>
     {% else %}
