--- a/jobs/templates/jobs/contact.html
+++ b/jobs/templates/jobs/contact.html
@@ -1,4 +1,76 @@
 {% extends "jobs/base.html" %}
+{% load static %}
+<script type="text/javascript">
+   (function() {
+         emailjs.init('n36sqN4yqaW_9I6NR');
+   })();
+</script>
+
 {% block content %}
-   <h1>Contact Page!</h1>
+
+   <section class="container-fluid py-4" id="contact">
+      <h1 class="text-center">Contact us</h1>
+      <h2 class="text-center">For a confidential chat</h2>
+      <form onsubmit="return sendMail(this);" id="contact-form" class="mx-5 px-5 py-2 border" autocomplete="on">
+        <p class="text-center">
+         Have questions? Fill out the enquiry form and we will get back to you as soon as possible
+        </p>
+        <input
+          class="form-control my-3"
+          type="text"
+          id="name"
+          name="name"
+          placeholder="Name"
+          autocomplete="on"
+        />
+        <input
+          class="form-control my-3"
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          autocomplete="on"
+        />
+        <input
+          class="form-control my-3"
+          type="tel"
+          id="tel"
+          name="tel"
+          placeholder="Tel Number"
+          autocomplete="on"
+        />
+        <textarea
+          class="form-control my-3"
+          name="interest"
+          id="interest"
+          rows="5"
+          placeholder="Enquiry details"
+        ></textarea>
+        <button
+          class="btn btn-success btn-md-lg d-grid gap-2 col-4 mx-auto"
+          type="submit"
+          value="Submit"
+          data-bs-toggle="modal"
+          data-bs-target="#acknowledge"
+        >Send</button>
+      </form>
+
+      <div class="modal" tabindex="-1" id="acknowledge">
+         <div class="modal-dialog modal-dialog-centered">
+           <div class="modal-content text-center">
+             <div class="modal-header bg-success">
+               <h5 class="modal-title">Thanks for getting in contact!</h5>
+               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+             </div>
+             <div class="modal-body">
+               <p>We'll be in touch shortly</p>
+             </div>
+             <div class="modal-footer">
+               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+             </div>
+           </div>
+         </div>
+       </div>
+
+       <script src="{% static 'jobs/scripts/sendEmail.js' %}"></script>
 {% endblock content %}
