--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -13,7 +13,7 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="{% static 'jobs/css/style.css' %}"
+      href="{% static 'css/style.css' %}"
     />
 
     {% if title %}
