--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
-            ><img src="/media/axiom_logo_no_bg.webp" alt="axiom logo" width="250px"
+            ><img src="{% static 'media/axiom_logo_no_bg.webp' %}" alt="axiom logo" width="250px"
           /></a>
           <button
             class="navbar-toggler"
