--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -49,7 +49,7 @@ body {
 
   .home-hero {
     min-height: 75vh;
-    background:url(/media/meeting.webp) center center no-repeat;
+    background:url(https://res.cloudinary.com/dltyaip8n/image/upload/v1697646833/static/media/meeting.01a37b96aa5b.webp) center center no-repeat;
     background-size: cover;
     position: relative;
   }
