--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -71,10 +71,15 @@ body {
     color: #fafafa;
   }
 
-  /* .serv-card {
-    margin: 0 20px !important;
-    padding: 0 !important;
-  } */
+  .card {
+    height: 100% !important;
+  }
+
+  .card-footer {
+    background-color: #dddddde4 !important;
+    border-top: 0 !important;
+    padding-top: 0 !important;
+  }
   
   .services {
     padding: 30px 0px;
