--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -26,7 +26,7 @@
           </p>
         </div>
 
-        <div class="card-body mx-auto">
+        <div class="card-footer mx-auto">
           <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
@@ -46,7 +46,7 @@
           </p>
         </div>
 
-        <div class="card-body mx-auto">
+        <div class="card-footer mx-auto">
           <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
@@ -66,7 +66,7 @@
           </p>
         </div>
 
-        <div class="card-body mx-auto">
+        <div class="card-footer mx-auto">
           <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
