--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -12,7 +12,7 @@
 <section class="services container-fluid">
   <h2 class="text-center pb-3">Our Services</h2>
   <div class="row">
-    <div class="col col-md-4">
+    <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
           src="{% static 'media/new_job.webp' %}"
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="col col-md-4">
+    <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
           src="{% static 'media/grow_your_business.webp' %}"
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="col col-md-4">
+    <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
           src="{% static 'media/merger.webp' %}"
