--- a/jobs/templates/jobs/job_form.html
+++ b/jobs/templates/jobs/job_form.html
@@ -1,7 +1,7 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="content-section">
+<div class="content-section container">
     <!--  method POST sends form data to view-->
     <form method="POST">
         <!-- CSRF token required for security -->
