--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -47,8 +47,8 @@
               <a class="nav-item nav-link" href="{% url 'jobs-postings' %}"
                 >Jobs</a
               >
-              <a class="nav-item nav-link" href="{% url 'jobs-about' %}"
-                >About</a
+              <a class="nav-item nav-link" href="{% url 'jobs-services' %}"
+                >Services</a
               >
               <a class="nav-item nav-link" href="{% url 'jobs-contact' %}"
                 >Contact</a
