--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -11,7 +11,7 @@
 
 <section class="services container-fluid">
   <h2 class="text-center pb-3">Our Services</h2>
-  <div class="row">
+  <div class="row gy-5">
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
@@ -71,7 +71,65 @@
         </div>
       </div>
     </div>
+    <div class="col-12 col-md-4">
+      <div class="card px-0">
+        <img
+          src="{% static 'media/new_job.webp' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Recruitment</h5>
+          <p class="card-text">
+            Are you looking for a new job? We specialise in the financial service sector. To find our more please visit our jobs page.
+          </p>
+        </div>
 
+        <div class="card-footer mx-auto">
+          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-4">
+      <div class="card px-0">
+        <img
+          src="{% static 'media/grow_your_business.webp' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Growing your business</h5>
+          <p class="card-text">
+            Looking to hire the best talent? We can help you fill your current vacancies by finding the right candidates for you.
+          </p>
+        </div>
+
+        <div class="card-footer mx-auto">
+          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-4">
+      <div class="card px-0">
+        <img
+          src="{% static 'media/merger.webp' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Acquisitions And Mergers</h5>
+          <p class="card-text">
+            Planning on selling your business? Or maybe you are looking to expand? We can help by putting you in touch with the right people. 
+          </p>
+        </div>
+
+        <div class="card-footer mx-auto">
+          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
 
   </div>
 </section>
