--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {% extends "jobs/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="container">
     <div class="content-section">
         <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -25,4 +26,5 @@
         </div>
     </form>
     </div>
+</div>
 {% endblock content %}
