--- a/jobs/templates/jobs/contact.html
+++ b/jobs/templates/jobs/contact.html
@@ -47,10 +47,11 @@
           class="btn btn-success btn-md-lg d-grid gap-2 col-4 mx-auto"
           type="submit"
           value="Submit"
-          data-bs-toggle="modal"
-          data-bs-target="#acknowledge"
         >Send</button>
       </form>
+
+      <!-- data-bs-toggle="modal"
+      data-bs-target="#acknowledge" -->
 
       <div class="modal" tabindex="-1" id="acknowledge">
          <div class="modal-dialog modal-dialog-centered">
