--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -1,3 +1,8 @@
+
+:root {
+  --main-icon-color: orange;
+}
+
 body {
     background: #dddddde4;
     color: #333333;
@@ -5,6 +10,7 @@ body {
     margin: 0 auto;
     /* margin-top: 5rem; */
   }
+
 
   img {
     max-width: 100%;
@@ -44,6 +50,7 @@ body {
     padding: 10px 20px;
     border: 1px solid black;
     border-radius: 15px;
+    margin-top: 30px;
     margin-bottom: 20px;
   }
 
@@ -155,3 +162,5 @@ body {
     padding: 3px 5px;
     margin-bottom: 5px;
   }
+
+ 
