--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -95,5 +95,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/67c1c04fa5.js" crossorigin="anonymous"></script>
   </body>
 </html>
