--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -10,7 +10,7 @@
 </section>
 
 <section class="services container-fluid">
-  <h2 class="text-center pb-3">Our Services</h2>
+  <h2 class="text-center pb-3">Partner with Axiom</h2>
   <div class="row gy-5">
     <div class="col-12 col-md-4">
       <div class="card px-0">
@@ -20,7 +20,7 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Recruitment</h5>
+          <h5 class="card-title text-center">Recruitment</h5>
           <p class="card-text">
             Are you looking for a new job? We specialise in the financial service sector. To find our more please visit our jobs page.
           </p>
@@ -40,7 +40,7 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Growing your business</h5>
+          <h5 class="card-title text-center">Growing your business</h5>
           <p class="card-text">
             Looking to hire the best talent? We can help you fill your current vacancies by finding the right candidates for you.
           </p>
@@ -60,7 +60,7 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Acquisitions And Mergers</h5>
+          <h5 class="card-title text-center">Acquisitions And Mergers</h5>
           <p class="card-text">
             Planning on selling your business? Or maybe you are looking to expand? We can help by putting you in touch with the right people. 
           </p>
@@ -79,9 +79,9 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Recruitment</h5>
+          <h5 class="card-title text-center">Become and Axiom Consultant</h5>
           <p class="card-text">
-            Are you looking for a new job? We specialise in the financial service sector. To find our more please visit our jobs page.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore soluta optio amet porro culpa, perspiciatis, repellat dolorum neque vitae aut architecto, consequatur aliquid. Mollitia est molestiae voluptate minus voluptates neque.
           </p>
         </div>
 
@@ -99,9 +99,9 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Growing your business</h5>
+          <h5 class="card-title text-center">Become an Axiom Client</h5>
           <p class="card-text">
-            Looking to hire the best talent? We can help you fill your current vacancies by finding the right candidates for you.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium in fuga sint odit maiores asperiores quo dolorum enim repudiandae cumque delectus nihil sit earum sed, quos quidem deleniti suscipit commodi!
           </p>
         </div>
 
@@ -119,9 +119,9 @@
           alt="..."
         />
         <div class="card-body">
-          <h5 class="card-title">Acquisitions And Mergers</h5>
+          <h5 class="card-title text-center">Our focus sectors</h5>
           <p class="card-text">
-            Planning on selling your business? Or maybe you are looking to expand? We can help by putting you in touch with the right people. 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestiae aut similique vitae delectus ex architecto animi explicabo impedit at ducimus iure vero commodi, asperiores voluptas, assumenda quos, corporis velit?
           </p>
         </div>
 
