--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -13,14 +13,14 @@
 
 <div class="container media content-section">
   <div class="media-body">
-    <div class="article-metadata row">
+    <div class="job-metadata row">
       <small class="text-muted col icon"><i class="fa-solid fa-location-dot fa-lg" style="color: orange;"></i> {{ job.location }}</small>
       <small class="text-muted col text-end"><i class="fa-solid fa-calendar fa-lg" style="color: orange;"></i> {{ job.date_posted|date:"F d, Y" }}</small>
     </div>
     <h3><a class="job-title" href="{% url 'job-detail' job.id %}">{{ job.job_title }}</a></h3>
     <!-- <p class="article-content">{{ job.description }}</p> -->
   </div>
-  <div class="text-muted article-metadata row py-1">
+  <div class="text-muted job-metadata row py-1">
     <small class="col"><i class="fa-solid fa-euro-sign fa-lg" style="color: orange;"></i> {{ job.salary }}</small>
     <small class="col text-end"><strong class="jobtype">{{ job.job_type }}</strong></small>
 </div>
