--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -10,42 +10,158 @@
    </div>
  </section>
 <section class="services">
-   <div class="container">
-      <div class="col-12">
+   <div class="container row gy-5">
+
+      <div class="col-6">
          <div class="card px-0">
-         <!-- <img
-            src="{% static 'media/new_job.webp' %}"
-            class="card-img-top"
-            alt="..."
-         /> -->
-         <div class="card-body">
-            <h5 class="card-title text-center">Grow your business</h5>
-            <p class="card-text">
-               <strong>Recruitment of top talent: </strong>Axiom Consultants specialise in identifying and sourcing highly skilled professionals who can contribute to the growth and success of your business. Through our extensive network, job portals, and recruitment strategies, we can attract and connect you with the right candidates who possess the necessary expertise and experience.
-            </p>
-            <p class="card-text">
-               <strong>Streamlining hiring processes: </strong>Axiom Consultants can save you time and effort by handling the entire recruitment process on your behalf. We can screen CV’s, conduct initial interviews, and shortlist candidates who align with your business requirements. By outsourcing these tasks to experts, you can focus on other critical aspects of your business.
-            </p>
-            <p class="card-text">
-               <strong>Access to a wider candidate pool: </strong>Axiom Consultants have access to an extensive database of candidates and can tap into various channels to find talent that may not be easily accessible to your business. By leveraging our resources, you can reach a larger pool of potential employees and increase your chances of finding the best fit for your organisation.
-            </p>
-            <p class="card-text">
-               
-            </p>
-            <p class="card-text">
-               <strong>Market expertise and insights: </strong>Axiom Consultants have a deep understanding of the job market, industry trends, and talent dynamics. We can provide valuable insights and guidance on recruitment strategies, market conditions, and the availability of specific skills. This knowledge can help you make informed decisions and stay competitive in attracting and retaining top talent.
-            </p>           
-            <p class="card-text">
-               <strong>Enhanced employer branding: </strong>Axiom Consultants can help shape and communicate your employer brand effectively. We understand the importance of presenting your business in a favourable light to attract quality candidates. By focusing on your unique selling points, values, and culture, we can help position your brand as an attractive employer, promoting growth and attracting the right talent.
-            </p>
-            <p class="card-text">
-               <strong>Retention strategies: </strong>Hiring the right people is only the first step. Axiom Consultants can assist in implementing effective retention strategies to ensure that the talent you acquire remains engaged and committed to your business. We can provide insights on compensation packages, employee benefits, and development opportunities to help maximise employee satisfaction and reduce turnover.
-            </p>
-            <p class="card-text">
-               It's important to note that the specific ways in which Axiom Consultants can help grow your business may vary depending on your industry, location, and specific needs. It is recommended to discuss your requirements with Axiom Consultants directly to understand how we can tailor our services to support your business growth.
-            </p>
- 
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Recruitment</h3>
+               <p class="card-text text-center">20 Years of experience</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Strategic Planning</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Market Research</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Business Development</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Talent Acquisition and Management</li>
+               </ul>
+               <p class="card-text">
+                  Axiom Consultants bring expertise, experience, and a fresh perspective to help businesses identify growth opportunities, optimise operations, attract and retain talent, and drive overall business growth.
+               </p>
+            </div>
+
          </div>
+      </div>
+
+      <div class="col-6">
+         <div class="card px-0">
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Grow your business</h3>
+               <p class="card-text text-center">Axiom Consultants can help grow your business in several ways</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Recruitment of top talent</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Streamlining hiring processes</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Access to a wider candidate pool</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Market expertise and insights</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Enhanced employer branding</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Retention strategies</li>
+               </ul>
+               <p class="card-text">
+                  It's important to note that the specific ways in which Axiom Consultants can help grow your business may vary depending on your industry, location, and specific needs. It is recommended to discuss your requirements with Axiom Consultants directly to understand how we can tailor our services to support your business growth.
+               </p>
+            </div>
+
+         </div>
+      </div>
+
+      <div class="col-6">
+         <div class="card px-0">
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Acquisitions & Mergers</h3>
+               <p class="card-text text-center">We can provide valuable assistance throughout the entire mergers and acquisitions (M&A) process. Here are some ways they can help</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Strategic Planning</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Target Identification and Due Diligence</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Valuation and Negotiations</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Deal Structuring and Financing</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Change Management and Communication</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Post-Merger Performance Management</li>
+               </ul>
+               <p class="card-text">
+                  Please note that the specific services provided by Axiom Consultants may vary depending on the client's requirements and the unique circumstances of each M&A transaction.
+               </p>
+            </div>
+
+         </div>
+      </div>
+
+      <div class="col-6">
+         <div class="card px-0">
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Become an Axiom Consultant</h3>
+               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perspiciatis repellat in et ratione dolorum totam quos molestias vero! Nam sequi nemo debitis! Optio fugiat assumenda voluptatibus excepturi esse? Expedita.</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+               </ul>
+               <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In, consequatur unde. Quae dolor recusandae quasi quos corporis nisi dolorem tempore voluptates atque, natus dignissimos voluptatem amet quo, quod ipsa animi.
+               </p>
+            </div>
+
+         </div>
+      </div>
+
+      <div class="col-6">
+         <div class="card px-0">
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Become an Axiom Client</h3>
+               <p class="card-text text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quidem quo placeat eos eveniet cumque voluptatibus minima inventore excepturi enim ad unde eum perspiciatis rem odio, impedit distinctio adipisci! Animi.</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+               </ul>
+               <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque commodi corporis facilis? Sint laudantium libero, tenetur, dolores qui cupiditate hic officia quisquam, quibusdam similique at natus quasi voluptates sunt fugiat.
+               </p>
+            </div>
+
+         </div>
+      </div>
+
+      <div class="col-6">
+         <div class="card px-0">
+            <!-- <img
+               src="{% static 'media/new_job.webp' %}"
+               class="card-img-top"
+               alt="..."
+            /> -->
+            <div class="card-body">
+               <h3 class="card-title text-center">Areas of Expertise</h3>
+               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quo, neque dolores a labore sequi, suscipit temporibus, similique id in ut consequuntur. Nam quam sit nisi explicabo, non eum labore?</p>
+               <ul class="list-group my-3">
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+                  <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
+               </ul>
+               <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor corporis repellendus facere quis quas. Doloremque velit, nostrum magni quia corporis sint delectus, aliquid quo facilis praesentium, odio maxime dolorem nobis.
+               </p>
+            </div>
 
          </div>
       </div>
