updated home card text

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -81,7 +81,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Become and Axiom Consultant</h5>
           <p class="card-text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore soluta optio amet porro culpa, perspiciatis, repellat dolorum neque vitae aut architecto, consequatur aliquid. Mollitia est molestiae voluptate minus voluptates neque.
+            If you would like to manage your own work diary, work fully remotely and dictate what you earn, then becoming an Axiom Consultant might be for you. We work closely with our clients to forge lasting relationships. They trust us to deliver to them the best talent in the market. If you have experience in Financial Services or have worked in a recruitment sector that you would like to develop under the Axiom brand, then we would like to hear from you.
           </p>
         </div>
 
@@ -101,7 +101,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Become an Axiom Client</h5>
           <p class="card-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium in fuga sint odit maiores asperiores quo dolorum enim repudiandae cumque delectus nihil sit earum sed, quos quidem deleniti suscipit commodi!
+            Axiom Consultants has spent the last 5 years building a highly credible and recognised level of service that is unrivalled. Working closely with our clients, understanding the culture of your organisation and then presenting only relevant candidates to you is what we do best.
           </p>
         </div>
 
@@ -120,9 +120,17 @@
         />
         <div class="card-body">
           <h5 class="card-title text-center">Our focus sectors</h5>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestiae aut similique vitae delectus ex architecto animi explicabo impedit at ducimus iure vero commodi, asperiores voluptas, assumenda quos, corporis velit?
-          </p>
+          <ul class="card-text">
+            <li>Wealth Management</li>
+            <li>Financial Planning</li>
+            <li>Mergers & Acquisitions</li>
+            <li>Accountancy</li>
+            <li>AML & Compliance</li>
+            <li>Administration</li>
+            <li>Medical Services</li>
+            <li>IT</li>
+          </ul>
+
         </div>
 
         <div class="card-footer mx-auto">
