--- a/jobs/templates/jobs/contact.html
+++ b/jobs/templates/jobs/contact.html
@@ -1,6 +1,6 @@
 {% extends "jobs/base.html" %}
 {% load static %}
-
+{% block nav_contact%}active{% endblock %}
 {% block content %}
 
    <section class="container-fluid py-4" id="contact">
