--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,4 +1,7 @@
-{% extends "jobs/base.html" %} {% load static %}{% block content %}
+{% extends "jobs/base.html" %} 
+{% load static %}
+{% block nav_home%}active{% endblock %}
+{% block content %}
 
 <section class="home-hero container-fluid bglight p-5">
   <div class="home-hero-title-cont row justify-content-center">
