--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -1,5 +1,8 @@
 {% extends "jobs/base.html" %} 
+{% block nav_postings%}active{% endblock %}
 {% block content %}
+
+
 
 <section class="home-hero container-fluid bglight p-5 mb-5">
   <div class="home-hero-title-cont row justify-content-center">
