--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -1,5 +1,6 @@
 {% extends "jobs/base.html" %}
 {% load static %}
+{% block nav_services%}active{% endblock %}
 {% block content %}
 
 <section class="home-hero container-fluid bglight p-5">
